tests/golden/type_errors/array_reduce_member_arity.cd
[1].reduce(0);
