tests/golden/type_errors/array_reduce_member_arity.err
Type error at 1:13: expected 2 arguments but got 1
  [1].reduce(0);
              ^
